<resources>
    <string name="app_name">Ала-Арча</string>
    <string name="ala_archa">Ала-Арча</string>
    <string name="input_name">Введите имя</string>
    <string name="input_email">Введите почту</string>
    <string name="input_password">Введите пароль</string>
    <string name="register_button">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="login_button">ВОЙТИ</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="change_password">СМЕНИТЬ ПАРОЛЬ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>
</resources>